# fullstack_example

./: .gitignore  README.md
client/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: main.tsx
client/src/app/: App.tsx  AppShell.module.css  AppShell.tsx
client/src/app/hooks/: useResizableChatPane.ts  useWorkspaceEventBridge.ts
client/src/features/auth/: types.ts
client/src/features/chat/: config.ts  constants.ts  (+1 more)
client/src/shared/: config.ts  sessionInvalidation.ts  workspacePaths.ts  workspaceTools.ts
client/src/styles/: base.css  tokens.css
docs/: features.md  future_improvements.md  llm_stream.md  tools.md
server/: .env.example  pyproject.toml  requirements.txt
server/src/sequence/: main.py
server/src/sequence/agent/: README.md  agent_router.py  base_agent.py  llm_client.py  tool_registry.py
server/src/sequence/agent/helpers/: tool_helper.py
server/src/sequence/agent/prompts/: planner_prompt.py  system_prompt.py
server/src/sequence/agent/tools/execution_tools/: python_tools.py
server/src/sequence/agent/tools/planner_tools/: plan_tools.py
server/src/sequence/agent/tools/shared_tools/: user_tools.py  workspace_tools.py
server/src/sequence/api/routes/: auth.py  chat.py  workspace.py
server/src/sequence/core/: auth.py  config.py  dependencies.py  redis.py
server/src/sequence/database/: README.md  chat_db.py  files_db.py  pg_base.py
server/src/sequence/models/: auth.py  chat.py  chat_messages.py  stream_events.py  workspace.py
server/src/sequence/services/: chat_service.py  workspace_service.py
(+105 files in other folders)
